# ti-launchpad-playground

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README  README.md  doxygen.config  project.yml
docs/doxygen/: .gitignore
examples/: blinkingLed.c
include/: CMakeLists.txt  event.h  timer.h  types.h  watchdog.h
src/: CMakeLists.txt  blinkingLed.c  led.c  led.h  test.c
src/app/: event.c
src/hal/: timer.c  watchdog.c
test/: CMakeLists.txt  test_event.c  test_led.c  test_timer.c  test_watchdog.c
test/basic/: CMakeLists.txt  test_timer.cpp  test_watchdog.cpp
